# NeuroVocalic-F5

./: NeuroVocalic-F5.ipynb  Neuro_LipSync.ipynb  README.md  pyproject.toml
src/f5_tts/infer/: infer_gradio.py
src/f5_tts/train/: finetune_gradio.py
